--- a/Trades.API/Trades.API.csproj
+++ b/Trades.API/Trades.API.csproj
@@ -22,5 +22,9 @@
     <ProjectReference Include="..\Trades.Infrastructure\Trades.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Log\" />
+  </ItemGroup>
+
 
 </Project>
