Change top layer name

--- a/Trades.API/appsettings.json
+++ b/Trades.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "SqlConnection": {
-    "DefaultConnection": "Server=localhost;Database=TradesApi;User Id=sa;Password=yourPassword;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=TradesApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
